basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__nesting_task_lists.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓷𝓮𝓼𝓽𝓲𝓷𝓰_𝓽𝓪𝓼𝓴_𝓵𝓲𝓼𝓽𝓼                                                           │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Nesting task lists                                                           │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ Similarly, you can create a nested task list by indenting one or more list   │"
"│ ⤷ items:                                                                     │"
"│                                                                              │"
"│ □ Task item 1                                                                │"
"│   □ Subtask 1                                                                │"
"│ □ Task item 2                                                                │"
"│   □ Subtask 1                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
