basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__paragraphs.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓹𝓪𝓻𝓪𝓰𝓻𝓪𝓹𝓱𝓼                                                                   │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Paragraphs                                                                   │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ To create paragraphs in Markdown, use a blank line to separate blocks of     │"
"│ ⤷ text. Each block of text separated by a blank line is treated as a         │"
"│ ⤷ distinct paragraph.                                                        │"
"│                                                                              │"
"│ This is a paragraph.                                                         │"
"│                                                                              │"
"│ This is another paragraph.                                                   │"
"│                                                                              │"
"│ A blank line between lines of text creates separate paragraphs. This is the  │"
"│ ⤷ default behavior in Markdown.                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
