basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__rendered_markdown_view-6.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓣𝓮𝓼𝓽                                                                         │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Indented Lists                                                               │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ Lists can be indented                                                        │"
"│                                                                              │"
"│ ● First list item                                                            │"
"│   ○ Second list item                                                         │"
"│     ◆ Third list item                                                        │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
