basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__rendered_markdown_view-8.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓣𝓮𝓼𝓽                                                                         │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Code blocks                                                                  │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ To format a block of code, surround the code with triple backticks.          │"
"│                                                                              │"
"│                                                                              │"
"│  cd ~/Desktop                                                                │"
"│                                                                              │"
"│                                                                              │"
"│ You can also create a code block by indenting the text using Tab or 4 blank  │"
"│ ⤷ spaces.                                                                    │"
"│                                                                              │"
"│                                                                              │"
"│  cd ~/Desktop                                                                │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
