basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__rendered_markdown_view-9.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓣𝓮𝓼𝓽                                                                         │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Code blocks                                                                  │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ You can add syntax highlighting to a code block, by adding a language code   │"
"│ ⤷ after the first set of backticks.                                          │"
"│                                                                              │"
"│                                                                              │"
"│  function fancyAlert(arg) {                                                  │"
"│    if(arg) {                                                                 │"
"│      $.facebox({div:'#foo'})                                                 │"
"│    }                                                                         │"
"│  }                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
