basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__rendered_markdown_view.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ 𝓣𝓮𝓼𝓽                                                                         │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│                                                                              │"
"│▎Headings                                                                     │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ THIS IS A HEADING 1                                                          │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│ This is a heading 2                                                          │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│ ◉ This is a heading 3                                                        │"
"│                                                                              │"
"│ ◎ This is a heading 4                                                        │"
"│                                                                              │"
"│ ◈ 𝓣𝓱𝓲𝓼 𝓲𝓼 𝓪 𝓱𝓮𝓪𝓭𝓲𝓷𝓰 𝟓                                                        │"
"│                                                                              │"
"│ ✦ 𝓣𝓱𝓲𝓼 𝓲𝓼 𝓪 𝓱𝓮𝓪𝓭𝓲𝓷𝓰 𝟔                                                        │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
